# sparkpolars

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  publish.sh  pyproject.toml  readme.md  setup.py
.github/workflows/: ci.yml  gitleaks.yml  linting.yml  release.yml  test.yml
conda/: meta.yaml
conda_receip/: meta.yaml
src/: __init__.py  _from_polars_to_spark.py  _from_spark_to_polars.py  _utils.py  config.py  sparkpolars.py
src/sparkpolars/: _from_polars_to_spark.py  _from_spark_to_polars.py  _importlib_utils.py  _version.py  config.py  playground.py  sparkpolars.py
src/sparkpolars/polyspark/sql/: __init__.py  columns.py  dataframe.py  functions.py  spark_ops.py  sparksession.py  types.py  window.py
src/sparkpolars/sql/: dataframe.py  functions.py
tests/: conftest.py  test_data_conversion.py  test_importlib_utils.py  test_pack_unpack.py  test_polyspark_dataframe.py  test_polyspark_expr.py  test_polyspark_functions.py  test_schema_coverter.py  test_spark_to_polars.py  test_type_converter.py
tests/polyspark/: test_polyspark_dataframe.py  test_polyspark_expr.py  test_polyspark_functions.py
